# modules

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  create-module.sh
.github/: run-tests
.github/workflows/: ci.yml  clang-format.yml  repo-visualizer.yml
bitwise/: CMakeLists.txt
bitwise/documentation/: README.md
bitwise/src/: main.cpp
bitwise/tests/: main.ark
console/: CMakeLists.txt
console/documentation/: README.md  main.md
console/src/: main.cpp
console/tests/: main.ark
database/: CMakeLists.txt
database/documentation/: README.md
database/include/: database.hpp
database/src/: main.cpp  sqlite3.cpp
database/tests/: main.ark
draft/: CMakeLists.txt
draft/database/: CMakeLists.txt
draft/database/documentation/: README.md
draft/database/src/: sqlite3.cpp
draft/database/tests/: main.ark  run
draft/http/: CMakeLists.txt  bulk_req.py
draft/http/documentation/: README.md  client.md  server.md
draft/http/include/: http_module.hpp
draft/http/src/: client.cpp  main.cpp  server.cpp  utils.cpp
draft/http/tests/: api.py  run
draft/json/: CMakeLists.txt
draft/json/documentation/: README.md
draft/json/src/: main.cpp
draft/json/tests/: main.ark  test.json
draft/msgpack/: CMakeLists.txt
draft/msgpack/documentation/: Readme.md
draft/msgpack/include/: adaptor.hpp  ark_msgpack.hpp  objects.hpp  pack.hpp  unpack.hpp
draft/msgpack/src/: main.cpp  objects.cpp  unpack.cpp
draft/playground/: CMakeLists.txt  main.cpp
hash/: CMakeLists.txt
hash/documentation/: README.md  main.md
hash/include/: md5.hpp
hash/src/: main.cpp  md5.cpp
hash/tests/: main.ark  run
http/: CMakeLists.txt
http/documentation/: README.md  client.md  main.md  server.md
http/include/: http_module.hpp
http/src/: client.cpp  http_module.cpp  main.cpp  server.cpp  utils.cpp
http/tests/: main.ark  run
include/Ark/: Module.hpp
json/: CMakeLists.txt
json/documentation/: README.md  main.md
json/src/: main.cpp
json/tests/: main.ark
msgpack/: CMakeLists.txt
msgpack/documentation/: Readme.md  documentation.md  example.ark  mini_example.ark
msgpack/include/: adaptor.hpp  ark_msgpack.hpp  ark_msgpack_obj.hpp  ark_msgpack_pack.hpp  ark_msgpack_unpack.hpp  msgpack_module.hpp  object.hpp  pack.hpp  unpack.hpp
msgpack/src/: ark_msgpack_obj.cpp  ark_msgpack_pack.cpp  ark_msgpack_unpack.cpp  main.cpp  msgpack_module.cpp  object.cpp  objects.cpp  pack.cpp  unpack.cpp
msgpack/tests/: main.ark
random/: CMakeLists.txt
random/documentation/: README.md  main.md
random/src/: main.cpp
random/tests/: main.ark
sfml/: CMakeLists.txt
sfml/include/: sf_module.hpp
sfml/src/: main.cpp  sf_module.cpp
shell/: constant.py
shell/createmodules/: Template_CMakeLists.txt  constant.py  create.py  module_structure.json
src/: CMakeLists.txt
src/bitwise/: CMakeLists.txt
src/bitwise/documentation/: README.md
src/bitwise/src/: main.cpp
src/bitwise/tests/: main.ark
src/console/: CMakeLists.txt
src/console/documentation/: README.md
src/console/src/: main.cpp
src/console/tests/: main.ark
src/hash/: CMakeLists.txt
src/hash/documentation/: README.md
src/hash/include/: md5.hpp
src/hash/src/: main.cpp  md5.cpp
src/hash/tests/: run
src/http/: CMakeLists.txt
src/http/documentation/: README.md
src/http/src/: client.cpp  main.cpp
src/http/tests/: main.ark  run
src/random/: CMakeLists.txt
src/random/documentation/: README.md
